--- a/server.html
+++ b/server.html
@@ -174,6 +174,7 @@
         var ctx = canvas._ctx;
         ctx.fillStyle = 'white';
         ctx.font = '88px Arial';
+        ctx.textBaseline = 'top';
         Game.score.forEach(function(score, idx){
             var x = (idx == 0 ? canvas._canvas.width / 4 : (canvas._canvas.width / 4) * 3);
             ctx.fillText(score.toString(), x, 40);
@@ -199,6 +200,25 @@
             miss: new Audio('splat.wav'),
             coin: new Audio('coin.wav')
         };
+        window.addEventListener('keyup', function(e) {
+            switch (e.which) {
+                case 189: // '-' key DECR
+                    if (Game.ball.vel > 0) {
+                        Game.ball.vel--;
+                    }
+                    break;
+                case 187: // '=' key  INCR
+                    if (Game.ball.xvel < 100) {
+                        Game.ball.vel++;
+                    }
+                    break;
+                case 80: // p for pause
+                    Game.ball.vel = 0;
+                    break;
+                default:
+                    break;
+            }
+        })
     }
 
     /* global canvas */
