--- a/client/client.html
+++ b/client/client.html
@@ -3,7 +3,7 @@
 <head>
     <title>Mo-Po :: Player</title>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script type="text/javascript" src="canvas.js"></script>
+    <script type="text/javascript" src="/shared/canvas.js"></script>
     <!--
     <style>
         .outputText {
@@ -104,7 +104,7 @@
         /* global io */
         var socket = io('/player');
         socket.on('connect', function() {
-            console.log('connected to /player');
+            console.log('connected to /player socket');
             
             // listen for disconnect, game over
             socket.on('disconnect', function() {
