--- a/server/server.html
+++ b/server/server.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Mo-Po :: Mobile Pong</title>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script type="text/javascript" src="canvas.js"></script>
+    <script type="text/javascript" src="/shared/canvas.js"></script>
     <style>
         @font-face {
             font-family: Arcade;
@@ -34,7 +34,7 @@
     /* global io */
     var socket = io('/host');
     socket.on('connect', function() {
-        console.log('connected to /host');
+        console.log('connected to /host socket');
         Game.hostConnected = true;
 
         socket.on('players', function(data) {
