--- a/host/host.html
+++ b/host/host.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body style="margin:0;overflow:hidden;">
-    <script type="text/javascript" src="server.js"></script>
+    <script type="text/javascript" src="host.js"></script>
 </body>
 </html>
