Add login form for clients

--- a/client/client.html
+++ b/client/client.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Mo-Po :: Player</title>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="/shared/canvas.js"></script>
 </head>
