--- a/host/host.html
+++ b/host/host.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Mo-Po :: Mobile Pong</title>
-    <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script type="text/javascript" src="/assets/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="/shared/canvas.js"></script>
     <style type="text/css">
         @font-face {
