Add gameover communication

--- a/client/login.html
+++ b/client/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Mo-Po :: Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         .error {
