--- a/client/client.html
+++ b/client/client.html
@@ -4,6 +4,7 @@
     <title>Mo-Po :: Player</title>
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="/assets/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="/shared/canvas.js"></script>
 </head>
