--- a/host/host.html
+++ b/host/host.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Mo-Po :: Mobile Pong</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="text/javascript" src="/assets/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="/shared/canvas.js"></script>
     <style type="text/css">
