Added waiting list

--- a/client/client.html
+++ b/client/client.html
@@ -35,6 +35,19 @@
           text-align: center;
           font-family: Arial;
         }
+        #gameOver #btnPlayAgain {
+          width: 100%;
+          height: 80px;
+          font-family: Arcade;
+          font-size: 60px;
+          margin-top: 40px;
+          padding-top: 20px;
+          color: #E33231;
+          background-color: #422E51;
+          border: 0;
+          border-top: 3px solid #E33231;
+          border-bottom: 3px solid #E33231;
+        }
     </style>
 </head>
 <body>
@@ -42,6 +55,11 @@
     <div id="gameOver">
       <div class="heading">Game Over</div>
       <div id="winner"></div>
+      <div>
+        <button id="btnPlayAgain" type="button" onclick="location.reload()">
+          Play Again
+        </button>
+      </div>
       <div class="credits">Made by one of our team members: Rob Brander</div>
     </div>
 </body>
