Added game over delay

--- a/client/client.html
+++ b/client/client.html
@@ -32,7 +32,9 @@
           color: white;
           font-size: 1rem;
           position: absolute;
-          bottom: 40px;
+          bottom: 60px;
+          left: 0px;
+          width: 100%;
           text-align: center;
           font-family: Arial;
         }
@@ -61,7 +63,7 @@
           Play Again
         </button>
       </div>
-      <div class="credits">Made by one of our team members: Rob Brander</div>
+      <div class="credits">Made by one of our team members:<br />Rob Brander</div>
     </div>
 </body>
 </html>
