--- a/client/login.html
+++ b/client/login.html
@@ -17,6 +17,18 @@
             color: red;
 
         }
+        body {
+            background: url(/assets/client_background.png) no-repeat fixed center;
+            background-size: cover;
+            color: white;
+            padding: 20px;
+        }
+        #frmLogin {
+            margin-top: 100px;
+        }
+        #SignupMsg {
+            font: 16px Arial;
+        }
     </style>
     <script type="text/javascript">
         // NOTE: found on http://stackoverflow.com/questions/46155/validate-email-address-in-javascript
@@ -60,39 +72,32 @@
 </head>
 <body style="margin:0">
     <div class="container">
-        <h2>Rangle Up</h2>
         <form id="frmLogin" name="frmLogin" method="POST" onsubmit="return validateForm()">
-            <div>Please provide your name and email to play<div>
-            <br />
+            <div id="SignupMsg" class="form-group">Sign up to begin playing!</div>
             <div class="form-group">
-                <label for="txtFirstName"><span class="required">*</span> First Name:</label>
-                <input type="text" id="txtFirstName" name="firstName" maxlength="20" class="form-control" placeholder="First Name" />
+                <input type="text" id="txtFirstName" name="firstName" maxlength="20" class="form-control" placeholder="* First Name" />
                 <span id="errFirstName" class="error hidden">First name is required</span>
             </div>
             <div class="form-group">
-                <label for="txtLastName"><span class="required">*</span> Last Name:</label>
-                <input type="text" id="txtLastName" name="lastName" maxlength="20" class="form-control" placeholder="Last Name" />
+                <input type="text" id="txtLastName" name="lastName" maxlength="20" class="form-control" placeholder="* Last Name" />
                 <span id="errLastName" class="error hidden">Last name is required</span>
             </div>
             <div class="form-group">
-                <label for="txtEmail"><span class="required">*</span> Email:</label>
-                <input type="text" id="txtEmail" name="email" maxlength="100" class="form-control" placeholder="Email" />
+                <input type="text" id="txtEmail" name="email" maxlength="100" class="form-control" placeholder="* Email" />
                 <span id="errEmail" class="error hidden">Invalid or missing email address</span>
             </div>
             <div class="form-group">
-                <label for="txtJobTitle">Job Title:</label>
                 <input type="text" id="txtJobTitle" name="jobTitle" maxlength="100" class="form-control" placeholder="Job Title" />
             </div>
             <div class="form-group">
-                <label for="txtOrganization">Organization:</label>
                 <input type="text" id="txtOrganization" name="organization" maxlength="100" class="form-control" placeholder="Organization" />
             </div>
             <div class="form-group">
-                <input type="checkbox" id="chkOptIn" name="optIn" style="width:20px; vertical-align: middle"/>
-                <label for="chkOptIn" style="width: 90%; vertical-align: middle;">Level up your JavaScript skills with the most recent news and learnings from our experts.</label>
+                <input type="checkbox" id="chkOptIn" name="optIn" style="width:20px; vertical-align: middle; zoom: 2.5"/>
+                <label for="chkOptIn" style="width: 75%; vertical-align: middle;">Level up your JavaScript skills with the most recent news and learnings from our experts.</label>
             </div>
             <div class="form-group">
-                <input type="submit" class="form-control" value="Login" />
+                <input type="submit" class="form-control btn-danger" style="min-height: 45px; font-size: 20px;" value="BEGIN PLAYING" />
             </div>
         </form>
     </div>
