Fixed positioning of game over client screen

--- a/client/client.html
+++ b/client/client.html
@@ -22,7 +22,7 @@
         }
         #gameOver {
             display: none;
-            margin-top: 100px;
+            margin-top: 80px;
             padding: 20px 40px;
             font-family: Arial;
             text-align: center;
@@ -42,10 +42,9 @@
         .credits {
             color: white;
             font-size: 16px;
-            position: absolute;
-            bottom: 60px;
-            left: 0px;
-            width: 100%;
+            margin-top: 20px;
+            margin-left: -20px;
+            margin-right: -20px;
             text-align: center;
             font-family: Arial;
         }
